# care-orchestration-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
data/terminology/: icd10_common.json  loinc_observations.json  rxnorm_medications.json  snomed_symptoms.json
governance/clinical/: escalation_policies.py  safety_guardrails.py
governance/data/: classification.py
governance/metadata/agent_cards/: schema.py
scripts/: run_all.py  seed_data.py
src/core/: config.py  errors.py  resilience.py
src/core/audit/: logger.py  models.py
src/core/consent/: manager.py  models.py
src/core/database/: engine.py
src/core/human_review/: models.py  queue.py
src/core/lineage/: context.py  emitter.py  events.py  graph.py
src/core/observability/: correlation.py  logging.py  tracing.py
src/core/security/: auth.py  encryption.py  rbac.py  redaction.py
src/core/terminology/: models.py  service.py
src/core/workflow/: idempotency.py  models.py  saga.py
src/models/clinical/: care_plan.py  triage.py
src/models/fhir/: condition.py  observation.py  patient.py
src/models/scheduling/: appointment.py
tests/: conftest.py
tests/unit/test_core/: test_audit.py  test_consent.py  test_security.py  test_terminology.py  test_workflow.py
tests/unit/test_governance/: test_safety_guardrails.py
tests/unit/test_models/: test_fhir.py  test_triage.py
